--- a/Node_ejercicios/Server1/package.json
+++ b/Node_ejercicios/Server1/package.json
@@ -4,9 +4,12 @@
   "description": "servidor de prueba",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js", 
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AbelRios",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
