--- a/Node_ejercicios/Server/package.json
+++ b/Node_ejercicios/Server/package.json
@@ -4,12 +4,14 @@
   "description": "servidor de prueba",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AbelRios",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   }
 }
