--- a/Node_ejercicios/ServerSQL/package.json
+++ b/Node_ejercicios/ServerSQL/package.json
@@ -11,7 +11,10 @@
   "author": "Abel Rios",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.16",
+    "sql": "^0.78.0"
   }
 }
